@@ -1,7 +1,9 @@
 
 Changes in openair 0.5-18 [2012-01-16]
 *	Update trajectory files to 2011 and add Berlin, Paris
-*	Add option seg to pollutionRose to control the width of the segments
+*	Add option seg to pollutionRose to control the width of the
+	segments
+*	Add option start.day to timeVariation to control the order of weekdays.
 
 Changes in openair 0.5-17 [2012-01-12]
 =====================================
